[package]
name = "tanelorn"
version = "0.1.0"
authors = ["Emirhan Taşdeviren <emirhan.tasdeviren@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[dependencies]
env_logger = "0.10.0"
winit = "0.28.2"
render = { path = "crates/render" }
