[package]
name = "render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37.2", default_features = false }
raw-window-handle = "0.5.0"
dynamic-library = { path = "../dynamic-library" }
log = "0.4.17"
